Fixed grid on mobile devices for the sound section

--- a/styles.css
+++ b/styles.css
@@ -519,7 +519,7 @@ body {
     }
   }
   .sound {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     .sound-left-1 {
       padding: 20px;
     }
